--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="grid">
+    <div class="container">
+        <h1>Etch-A-Sketch</h1>
+        <div class="buttons">
+            <button id="clear" type="button">Clear</button>
+            <button id="black" type="button">Black</button>
+            <button id="rainbow" type="button">Rainbow</button>
+            <button id="greyscale" type="button">Greyscale</button>
+            <button id="size" type="button">Size</button>
+        </div>
+    
+        <div class="screen">
+
+        </div>
     </div>
     <script src = "script.js"></script>
 </body>
